--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,9 @@
-FROM mysql
-MAINTAINER sunwsong
-RUN apt-get update
-RUN apt-get install mariadb
-EXPOSE 80
+FROM alpine:3.17
+
+ARG DB_USER DB_PASSWD
+
+RUN apk update && apk upgrade && \
+    apk add mariadb && \
+    apk add mariadb-client
+
+EXPOSE 3306
