--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -29,7 +29,7 @@ http {
 
   }
 
-  server { # simple reverse-proxy
+  server {
     listen       443;
     server_name  sunwsong.42.fr;
     access_log   logs/sunwsong.42.fr.access.log  main;
