--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,9 +4,10 @@ RUN apk update && apk upgrade && \
     apk add --no-cache nginx && \
     mkdir /etc/nginx/ssl && \
     apk add --no-cache openssl && \
-    apk add --no-cache dumb-init && \
     openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt -subj '/C=US/ST=Oregon/L=Portland/CN=www.madboa.com'
 
 ADD conf/nginx.conf /etc/nginx
 
-EXPOSE 443 9000
+EXPOSE 443
+
+CMD ["nginx", "-g", "daemon off;"]
