--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,4 +1,3 @@
-user       www www;  ## Default: nobody
 worker_processes  5;  ## Default: 1
 error_log  logs/error.log;
 pid        logs/nginx.pid;
@@ -21,25 +20,18 @@ http {
   tcp_nopush   on;
   server_names_hash_bucket_size 128; # this seems to be required for some vhosts
 
-  server { # php/fastcgi
-    listen       9000;
-    server_name  domain1.com www.domain1.com;
-    access_log   logs/domain1.access.log  main;
-    root         html;
-
-  }
-
   server {
-    listen       443;
-    server_name  sunwsong.42.fr;
-    access_log   logs/sunwsong.42.fr.access.log  main;
+    listen              443 ssl;
+#    listen              [::443] ssl
+    server_name         sunwsong.42.fr;
+    access_log          logs/sunwsong.42.fr.access.log  main;
 
     ssl_certificate     /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
 
     location / {
-        root    /usr/share/nginx/html;
+        root    /var/lib/nginx/html;
         index   index.html;
     }
 
