--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -22,6 +22,7 @@ http {
 
   server {
     listen              443 ssl;
+    root                /var/www/html;
 #    listen              [::443] ssl
     server_name         sunwsong.42.fr;
     access_log          logs/sunwsong.42.fr.access.log  main;
@@ -31,19 +32,16 @@ http {
     ssl_protocols       TLSv1.2 TLSv1.3;
 
     location / {
-        root    /var/lib/nginx/html;
         index   index.html;
     }
 
     location ~* \.php$ {
-        # FastCGI 주소와 포트 지정
-        fastcgi_pass 127.0.0.1:9000;
-        # PHP-FPM에 전달될 문서 경로
+        fastcgi_index index.php;
+        fastcgi_pass wordpress:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        # PHP-FPM에 전달될 스크립트 파일명
-        fastcgi_param PATH_INFO $fastcgi_script_name;
-        # 다른 FastCGI 관련 구성 설정을 읽어서 포함
         include fastcgi_params;
+        try_files $uri /var/www/html/index.php;
+        # fastcgi_param PATH_INFO $fastcgi_script_name;
     }
   }
 }
