--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,12 +1,12 @@
 FROM debian:12.1
 
-RUN apt-get update && apt-get upgrade && \
+RUN apt-get update -y && apt-get upgrade -y && \
     apt-get install mariadb-server -y
-# && sed -i 's/skip-networking/# skip-networking/g' /etc/my.cnf.d/mariadb-server.cnf \
-# # && sed -i 's/bind-address/# bind-address/g' /etc/my.cnf.d/mariadb-server.cnf \
 # && echo "DB_USER=$DB_USER" > /etc/my_app/db_config \
 # && echo "DB_PASSWD=$DB_PASSWD" >> /etc/my_app/db_config \
 # && mkdir -p /run/mysqld
+
+ADD ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
 EXPOSE 3306
 
