--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.17
+FROM alpine:3.18
 
 RUN apk update && apk upgrade && \
     apk add --no-cache nginx && \
@@ -6,7 +6,7 @@ RUN apk update && apk upgrade && \
     apk add --no-cache openssl && \
     openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt -subj '/C=US/ST=Oregon/L=Portland/CN=www.madboa.com'
 
-ADD conf/nginx.conf /etc/nginx
+COPY conf/nginx.conf /etc/nginx
 
 EXPOSE 443
 
