--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.17
+FROM alpine:3.18
 
 RUN apk add php php-common php-json php-curl php-xml php-mysqli php-cgi fcgi php-pdo php-pdo_mysql php-soap php-posix php-ctype php-dom php-simplexml php-phar php-fpm curl mariadb-client && \
     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
@@ -6,9 +6,14 @@ RUN apk add php php-common php-json php-curl php-xml php-mysqli php-cgi fcgi php
     mv wp-cli.phar /usr/local/bin/wp && \
     mkdir /var/www && \
     mkdir /var/www/html && \
-    wp core download --path=/var/www/html --allow-root
+    adduser -D -g 'www-data' -G 'www-data' www-data
 
-ADD conf/www.conf /etc/php81/php-fpm.d/www.conf
-ADD conf/wp-config.php /var/www/html/wp-config.php
+COPY ./conf/www.conf /etc/php81/php-fpm.d/www.conf
+COPY ./conf/wp-config.php /tmp/wp-config.php
+COPY ./tools/init.sh /tmp
+
+WORKDIR /tmp
 
 EXPOSE 9000
+
+ENTRYPOINT [ "sh", "init.sh" ]
