--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,8 +8,9 @@ events {
 }
 
 http {
-  include    /etc/nginx/fastcgi.conf;
-  index    index.html index.htm index.php;
+  include mime.types;
+  include /etc/nginx/fastcgi.conf;
+  index index.php;
 
   default_type application/octet-stream;
   log_format   main '$remote_addr - $remote_user [$time_local]  $status '
@@ -21,9 +22,9 @@ http {
   server_names_hash_bucket_size 128; # this seems to be required for some vhosts
 
   server {
-    listen              443 ssl;
+    listen              443 ssl; # for IPv4
+#    listen              [::443] ssl; # for IPv6
     root                /var/www/html;
-#    listen              [::443] ssl
     server_name         sunwsong.42.fr;
     access_log          logs/sunwsong.42.fr.access.log  main;
 
@@ -32,13 +33,14 @@ http {
     ssl_protocols       TLSv1.2 TLSv1.3;
 
     location / {
-        index   index.html;
+        try_files $uri $uri/ /index.php?$args;
     }
 
     location ~* \.php$ {
         fastcgi_index index.php;
         fastcgi_pass wordpress:9000;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         include fastcgi_params;
         try_files $uri /var/www/html/index.php;
     }
