--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -4,16 +4,12 @@ RUN apk add php php-common php-json php-curl php-xml php-mysqli php-cgi fcgi php
     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
     chmod +x wp-cli.phar && \
     mv wp-cli.phar /usr/local/bin/wp && \
-    mkdir /var/www && \
-    mkdir /var/www/html && \
+    mkdir -p /var/www/html && \
     adduser -D -g 'www-data' -G 'www-data' www-data
 
 COPY ./conf/www.conf /etc/php81/php-fpm.d/www.conf
-COPY ./conf/wp-config.php /tmp/wp-config.php
 COPY ./tools/init.sh /tmp
-
-WORKDIR /tmp
 
 EXPOSE 9000
 
-ENTRYPOINT [ "sh", "init.sh" ]
+ENTRYPOINT [ "sh", "/tmp/init.sh" ]
