--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.18
 
-RUN apk add php php-common php-json php-curl php-xml php-mysqli php-cgi fcgi php-pdo php-pdo_mysql php-soap php-posix php-ctype php-dom php-simplexml php-phar php-fpm curl mariadb-client && \
+RUN apk add php php-common php-json php-curl php-xml php-mysqli php-cgi fcgi php-pdo php-pdo_mysql php-soap php-posix php-ctype php-dom php-simplexml php-phar php-fpm php-mbstring curl mariadb-client && \
     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
     chmod +x wp-cli.phar && \
     mv wp-cli.phar /usr/local/bin/wp && \
