--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   mariadb:
     build:
@@ -6,15 +7,13 @@ services:
     networks:
       - mynet
     volumes:
-      - dbvol:/etc/mysql
+      - dbvol:/var/lib/mysql
     restart: always
     environment:
       - DB_NAME
       - DB_USER
       - DB_PASSWD
       - DB_HOST
-#    stdin_open: true #tmp
-#    tty: true #tmp
 
   wordpress:
     build:
@@ -33,8 +32,6 @@ services:
       - DB_HOST
       - WP_ADMIN_PASSWD
       - WP_USER_PASSWD
-    stdin_open: true #tmp
-    tty: true #tmp
 
   nginx:
     build:
@@ -43,11 +40,11 @@ services:
       - mynet
     volumes:
       - wpvol:/var/www/html
-    ports:
-      - "443:443"
     depends_on:
       - wordpress
     restart: always
+    ports:
+      - "443:443"
 
 networks:
   mynet:
