--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -22,8 +22,7 @@ http {
   server_names_hash_bucket_size 128; # this seems to be required for some vhosts
 
   server {
-    listen              443 ssl; # for IPv4
-#    listen              [::443] ssl; # for IPv6
+    listen              443 ssl;
     root                /var/www/html;
     server_name         sunwsong.42.fr;
     access_log          logs/sunwsong.42.fr.access.log  main;
